Ver.
--------------------------------
- Feature - APIs for externals added (#169)

Ver. 4.17.1 - 2023-11-15
--------------------------------
- Feature - Information about stations addded in GetStatistics (sdk to be updated)(#168)

Ver. 4.17.0 - 2023-11-14
--------------------------------
- Feature - Alert for citizens are converted in Communications (appsettings update)(#166)
- Feature - Management of Map request of type Flood (sdk to be updated)(layers to be imported)(#167)

Ver. 4.16.0 - 2023-10-24
--------------------------------
- Feature - New APIs for Externals added, auth management through API Key (appsettings update)(#163)
- Feature - ChangeOrganization API added (sdk to be updated)(#164)
- Feature - GetStatistics API updated (sdk to be updated)(#165)

Ver. 4.15.4 - 2023-10-12
--------------------------------
- Bugfix - Associated layer details added (#162)

Ver. 4.15.3 - 2023-10-05
--------------------------------
- Feature - Added 'Processing' as Map Request status (#160)
- Feature - Added fitlers for: Communications, Alerts, Stations (#159)

Ver. 4.15.2 - 2023-09-26
--------------------------------
- Bugfix - Fix GetTimeSeriesOutput class (#156)

Ver. 4.15.1 - 2023-09-22
--------------------------------
- Bugfix - Fix ValidateMeasureInput class

Ver. 4.15.0 - 2023-09-20
--------------------------------
- Feature - Validation for measures added (#157)

Ver. 4.14.4 - 2023-09-12
--------------------------------
- Bugfix - Fix sorting for paginated APIs 

Ver. 4.14.3 - 2023-09-11
--------------------------------
- Bugfix - Fix GetReports visibility management 

Ver. 4.14.2 - 2023-07-24
--------------------------------
- Bugfix - Validation errors added in DTO classes (#155)

Ver. 4.14.1 - 2023-07-18
--------------------------------
- Feature - Job for notification received added

Ver. 4.14.0 - 2023-07-17
--------------------------------
- Feature - Purge job settig update to 7 days (#153)
- Bugfix - Fix MapRequest create function (#154)
