@@ -12,22 +12,16 @@ namespace Ermes.Core.Helpers
     {
         public static byte[] CreateThumbnailFromImage(byte[] fileBytes, int thumbnailSize, int imageQuality, ILogger logger)
         {
-            logger.Info($"Original fileBytes size: {fileBytes.Length}");
             logger.Info($"Try to create thumbnail with size: {thumbnailSize}, quality: {imageQuality}");
             using (Image image = Image.FromStream(new MemoryStream(fileBytes)))
             {
                 int minSize = Convert.ToInt32(image.Width > image.Height ? image.Height : image.Width);
-                logger.Info($"Min size: {minSize}");
                 var destRect = new Rectangle(0, 0, thumbnailSize, thumbnailSize);
-                logger.Info($"DestRect created: {destRect.Size}");
                 var destImage = new Bitmap(thumbnailSize, thumbnailSize);
-                logger.Info($"DestImage created: {destImage.Size}");
                 //destImage.SetResolution(Math.Min(120, image.HorizontalResolution), Math.Min(120, image.VerticalResolution));
                 //logger.Info($"DestImage setResolution done: {image.HorizontalResolution}, {image.VerticalResolution}");
-                logger.Info($"setResolution commented");
                 using (var graphics = Graphics.FromImage(destImage))
                 {
-                    logger.Info($"graphics created");
                     graphics.CompositingMode = CompositingMode.SourceCopy;
                     graphics.CompositingQuality = CompositingQuality.HighQuality;
                     graphics.InterpolationMode = InterpolationMode.HighQualityBicubic;
@@ -36,23 +30,20 @@ namespace Ermes.Core.Helpers
 
                     using (var wrapMode = new ImageAttributes())
                     {
-                        logger.Info($"Trying to set image attributes....");
                         wrapMode.SetWrapMode(WrapMode.TileFlipXY);
                         graphics.DrawImage(image, destRect, 0, 0, image.Width, image.Height, GraphicsUnit.Pixel, wrapMode);
-                        logger.Info($"Image attributes set");
                     }
 
                     EncoderParameters qualityEncodingParameters = new EncoderParameters(1);
                     qualityEncodingParameters.Param[0] = new EncoderParameter(System.Drawing.Imaging.Encoder.Quality, imageQuality);
-                    logger.Info($"Creating output stream...");
                     using (MemoryStream outStream = new MemoryStream())
                     {
                         var encoder = ImageCodecInfo.GetImageEncoders().Where(i => i.FormatID == ImageFormat.Jpeg.Guid).FirstOrDefault();
                         destImage.Save(outStream, encoder, qualityEncodingParameters);
+                        logger.Info($"Thumbnail created");
                         return outStream.ToArray();
                     }
                 }
-
             }
         }
     }
