@@ -1,6 +1,7 @@
 Ver.
 --------------------------------
 - Feature - APIs for externals added (#169)
+- Feature - PRO alert converted in communication (#170)
 
 Ver. 4.17.1 - 2023-11-15
 --------------------------------
